<resources>
    <string name="app_name">Simampoeh</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nik_kodelayanan">NIK#KodeLayanan</string>
    <string name="cek_informasi_status_layanan_anda">Cek Informasi Status Layanan Anda</string>
    <string name="kelahiran">Akta Kelahiran</string>
    <string name="pengakuan_anak">Akta Pengakuan Anak</string>
    <string name="pengesahan_anak">Akta Pengesahan Anak</string>
    <string name="pengangkatan_anak">Akta Pengangkatan Anak</string>
    <string name="perkawinan">Akta Perkawinan</string>
    <string name="perceraian">Akta Perceraian</string>
    <string name="kematian">Akta Kematian</string>
    <string name="kartu_keluarga">Kartu Keluarga</string>
    <string name="kartu_keluarga_tambah_anak">Penambahan Data Anak</string>
    <string name="ubah_data">Perubahan Data</string>
    <string name="baru">Baru</string>
    <string name="kartu_keluarga_tambah_anggota">Penambahan Anggota Keluarga</string>
    <string name="ktp">KTP</string>
    <string name="hilang">Hilang</string>
    <string name="rusak">Rusak</string>
    <string name="kartu_identitas_anak">Kartu Identitas Anak</string>
    <string name="surat_pindah">Surat Pindah</string>
    <string name="lainnya">Lainnya</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="daftar_pelayanan_sibisa">Daftar Pelayanan Sibisa</string>
    <string name="login">Login</string>
    <string name="nik">NIK</string>
    <string name="password">Password</string>
    <string name="atau">atau</string>
    <string name="daftar">Daftar</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="reset_password">Reset password</string>
    <string name="email">Email</string>
    <string name="reset">Reset</string>
    <string name="selamat_datang">Selamat datang!</string>
    <string name="silahkan_masuk_ke_akun_anda">Silahkan masuk ke akun anda</string>
    <string name="silahkan_isi_nik_dan_email_untuk_reset_password">Silahkan isi NIK dan email untuk reset password</string>
    <string name="nomor_kartu_keluarga">Nomor Kartu Keluarga</string>
    <string name="nomor_kartu_keluarga_lama">Nomor Kartu Keluarga (KK) Lama</string>
    <string name="no_handphone">No. Handphone</string>
    <string name="daftar_sekarang">Daftar sekarang!</string>
    <string name="dan_akses_layanan_online_anda">Dan akses layanan online anda</string>
    <string name="kembali">Kembali</string>
    <string name="pengajuan_berkas">Pengajuan Berkas</string>
    <string name="jenis_berkas">Jenis berkas</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="status">Status</string>
    <string name="profil">Profil</string>
    <string name="pengajuan">Pengajuan</string>
    <string name="beranda">Beranda</string>
    <string name="data_diri">Data diri</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="nik_label">1234567812345678</string>
    <string name="name_label">Ucok</string>
    <string name="alamat_label">Jl. Ka**** No.**</string>
    <string name="keluar">Keluar</string>
    <string name="selamat_datang_kembali">Selamat datang kembali,</string>
    <string name="wah_pengajuan_kamu_kosong">Wah, pengajuan layanan kamu kosong!</string>
    <string name="tagihan">Tagihan Saya</string>
    <string name="informasi">Informasi</string>
    <string name="cek_status_layanan">Cek Status Layanan</string>
    <string name="semua_layanan">Semua Layanan</string>
    <string name="silahkan_masuk_untuk_mengakses_layanan">Silahkan masuk untuk mengakses layanan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="akta_kelahiran">Akta Kelahiran</string>
    <string name="garis_penghubung">-</string>
    <string name="data_bayi_anak">Data Bayi / Anak</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tempat_dilahirkan">Tempat Dilahirkan</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jam_kelahiran">Jam Kelahiran</string>
    <string name="kelahiran_ke">Kelahiran Ke</string>
    <string name="jenis_kelahiran">Jenis Kelahiran</string>
    <string name="berat_bayi">Berat Bayi (kg)</string>
    <string name="panjang_bayi">Panjang Bayi (cm)</string>
    <string name="penolong_kelahiran">Penolong Kelahiran</string>
    <string name="nama_ayah">Nama Ayah</string>
    <string name="nama_ibu">Nama Ibu</string>
    <string name="nama_saksi_i">Nama Saksi I</string>
    <string name="nama_saksi_ii">Nama Saksi II</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="tujuan_pengiriman">Tujuan Pengiriman</string>
    <string name="provinsi">Provinsi</string>
    <string name="kabupaten_kota">Kabupaten / Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="kelengkapan_berkas">Kelengkapan Berkas</string>
    <string name="nama_berkas">Nama Berkas</string>
    <string name="wajib_opsional">Wajib / Opsional</string>
    <string name="tambah">Tambah</string>
    <string name="kode_layanan">Kode layanan</string>
    <string name="kamu_belum_pernah_menggunakan_layanan_ini">Kamu belum pernah menggunakan layanan ini</string>
    <string name="kartu_tanda_penduduk">Kartu Tanda Penduduk</string>
    <string name="nomor_induk_kependudukan_nik">Nomor Induk Kependudukan (NIK)</string>
    <string name="agama">Agama</string>
    <string name="alasan_pengajuan">Alasan Pengajuan</string>
    <string name="title_activity_akta_pengakuan_anak">AktaPengakuanAnakActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tambah_akta_pengakuan">TambahAktaPengakuanActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="data_anak">Data Anak</string>
    <string name="tempat_kelahiran">Tempat Kelahiran</string>
    <string name="anak_ke">Anak ke-</string>
    <string name="nomor_akta_kelahiran">Nomor Akta Kelahiran</string>
    <string name="tanggal_terbit_akta_lahir">Tanggal Terbit Akta Lahir</string>
    <string name="dinas_kab_kota_penerbit_akta_kelahiran">Dinas Kab/Kota Penerbit Akta Kelahiran</string>
    <string name="pengiriman_dengan_kantor_pos">Pengiriman dengan Kantor Pos</string>
    <string name="tanggal_pemberkatan_perkawinan">Tanggal Pemberkatan Perkawinan</string>
    <string name="nama_organisasi_penghayat_kepercayaan">Nama Organisasi Penghayat Kepercayaan</string>
    <string name="nama_badan_peradilan">Nama Badan Peradilan</string>
    <string name="no_putusan_penetapan_pengadilan">No. Putusan Penetapan Pengadilan</string>
    <string name="tgl_putusan_penetapan_pengadilan">Tgl Putusan Penetapan Pengadilan</string>
    <string name="nama_pemuka_agama_penghayat_kepercayaan">Nama Pemuka Agama/Penghayat Kepercayaan</string>
    <string name="ijin_perwakilan_bagi_wna_nomor">Ijin perwakilan bagi WNA/Nomor</string>
    <string name="jumlah_anak_yang_telah_diakui_dan_disahkan">Jumlah anak yang telah diakui dan disahkan</string>
    <string name="data_perkawinan">Data Perkawinan</string>
    <string name="identitas_anak">Identitas Anak</string>
    <string name="ktp_baru">KTP - Baru</string>
    <string name="ktp_hilang">KTP - Hilang</string>
    <string name="contoh_kartu_hilang_rusak">Contoh: Kartu hilang/rusak</string>
    <string name="ktp_rusak">KTP - Rusak</string>
    <string name="ktp_perubahan_data">KTP - Perubahan Data</string>
    <string name="hubungan_dengan_yang_mati">Hubungan Dengan Yang Mati</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="data_alamat">Data Alamat</string>
    <string name="rt_rw">RT / RW</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="telepon">Telepon</string>
    <string name="data_kematian">Data Kematian</string>
    <string name="pukul">Pukul</string>
    <string name="bertempat_di">Bertempat di</string>
    <string name="penyebab_kematian">Penyebab Kematian</string>
    <string name="data_peserta">Data Peserta</string>
    <string name="data_pasangan">Data Pasangan</string>
    <string name="data_keluarga">Data Keluarga</string>
    <string name="data_yang_meninggal">Data yang Meninggal</string>
    <string name="kepala_keluarga">Kepala Keluarga</string>
    <string name="nik_tidak_ditemukan">NIK tidak ditemukan</string>
    <string name="daftar_anggota_keluarga">Daftar Anggota Keluarga</string>
    <string name="centang_anggota_keluarga_yang_pindah">Centang anggota keluarga yang pindah</string>
    <string name="data_tujuan_pindah">Data Tujuan Pindah</string>
    <string name="alasan_pindah">Alasan Pindah</string>
    <string name="jenis_kepindahan">Jenis Kepindahan</string>
    <string name="status_kk_yang_tidak_pindah">Status KK yang tidak pindah</string>
    <string name="status_kk_yang_pindah">Status KK yang pindah</string>
    <string name="data_pemohon">Data Pemohon</string>
    <string name="status_hubungan_dalam_keluarga">Status Hubungan dalam Keluarga</string>
    <string name="alasan_permohonan">Alasan Permohonan</string>
    <string name="pilih_jenis_pelayanan">Pilih Jenis Pelayanan</string>
    <string name="alasan_lainnya">Alasan Lainnya</string>
    <string name="tambah_anggota_kk">Tambah Anggota KK</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="data_anggota_keluarga_kosong">Data anggota keluarga kosong</string>
    <string name="label_mohon_tunggu">Mohon tunggu…</string>
    <string name="option_menu">Option Menu</string>
    <string name="opsi_menu">Opsi menu</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="cek_layanan_anda">Cek Layanan Anda!</string>
    <string name="silahkan_masukkan_nik_dan_kode_layanan_anda">Silahkan masukkan NIK dan Kode Layanan anda</string>
    <string name="cek">Cek</string>
    <string name="layanan_anda">Layanan Anda</string>
    <string name="layanan_pengiriman">Layanan Pengiriman</string>
    <string name="pilih_kecamatan">Pilih Kecamatan</string>
    <string name="pilih_kelurahan">Pilih Kelurahan</string>
    <string name="pilih_jenis">Pilih Jenis</string>
    <string name="pilih_shdk">Pilih SHDK</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="kirim_warning">Pastikan data anda sudah sesuai sebelum mengirim. Jika sudah, tap tombol kirim.</string>
    <string name="kirim">Kirim</string>
    <string name="sedang_mengirim">Sedang mengirim, mohon tunggu…</string>
    <string name="berhasil_kirim">Layanan berhasil diajukan. Silahkan lihat pengajuan anda pada menu Pengajuan di beranda.</string>
    <string name="kembali_ke_beranda">Kembali ke Beranda</string>
    <string name="pilih_tempat_lahir">Pilih Tempat Lahir</string>
    <string name="pilih_penolong">Pilih Penolong</string>
    <string name="label_0_00">0.00</string>
    <string name="pilih_agama">Pilih agama</string>
    <string name="data_suami">Data Suami</string>
    <string name="data_istri">Data Istri</string>
    <string name="label_no_sts">1280414240100000xxxxx</string>
    <string name="layanan">Layanan</string>
</resources>