<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:clickable="true"
            android:focusable="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left_primary"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kembali"
                android:layout_marginStart="3dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/img_register"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/daftar_sekarang"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/dan_akses_layanan_online_anda"
            android:textSize="15sp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_nik"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/edt_text_custom"
            android:inputType="number"
            android:hint="@string/nik"
            android:maxLength="16"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_no_kk"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/edt_text_custom"
            android:inputType="number"
            android:hint="@string/nomor_kartu_keluarga"
            android:maxLength="16"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/edt_text_custom"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_no_hp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/edt_text_custom"
            android:inputType="phone"
            android:hint="@string/no_handphone"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/daftar"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:background="@drawable/btn_shape_rounded_primary"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <include android:id="@+id/progressBar" layout="@layout/progress_layout_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>