<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cek_layanan.FormCekLayananFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/cek_layanan_anda"
            android:textStyle="bold"
            android:textSize="22sp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/silahkan_masukkan_nik_dan_kode_layanan_anda"
            android:textSize="15sp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_nik"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/edt_text_custom"
            android:inputType="number"
            android:hint="@string/nik"
            android:maxLength="16"
            android:textAllCaps="true"
            android:drawableEnd="@drawable/ic_credit_card"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_kode"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/edt_text_custom"
            android:inputType="text"
            android:maxLength="6"
            android:hint="@string/kode_layanan"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cek"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/cek"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:background="@drawable/btn_shape_rounded_primary"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>