<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:clickable="true"
            android:focusable="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left_primary"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kembali"
                android:layout_marginStart="3dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/img_login"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/selamat_datang"
            android:textStyle="bold"
            android:textSize="22sp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/silahkan_masuk_ke_akun_anda"
            android:textSize="15sp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_nik"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/edt_text_custom"
            android:inputType="number"
            android:hint="@string/nik"
            android:maxLength="16"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/edt_text_custom"
            android:inputType="textPassword"
            android:hint="@string/password"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:background="@drawable/btn_shape_rounded_primary"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight=".4"
                android:background="@android:color/darker_gray"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".15"
                android:text="@string/atau"
                android:textSize="15sp"
                android:textAlignment="center"
                android:gravity="center"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight=".4"
                android:background="@android:color/darker_gray"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="5dp"
            android:text="@string/daftar"
            android:textStyle="bold"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            android:background="@drawable/btn_shape_no_fill"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lupa_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/colorBlue"
            android:text="@string/lupa_password"
            android:textAlignment="center"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <include android:id="@+id/progressLayout" layout="@layout/progress_layout_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>