<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.lupa_password.LupaPasswordActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left_primary"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kembali"
                android:layout_marginStart="3dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/reset_password"
            android:textStyle="bold"
            android:textSize="22sp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/silahkan_isi_nik_dan_email_untuk_reset_password"
            android:textSize="14sp"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_nik"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/edt_text_custom"
            android:inputType="number"
            android:hint="@string/nik"
            android:maxLength="16"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="10dp"
            android:background="@drawable/edt_text_custom"
            android:inputType="text"
            android:hint="@string/email"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:background="@drawable/btn_shape_rounded_primary"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/img_lupa_pass"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <include android:id="@+id/progressLayout" layout="@layout/progress_layout_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>